tests/compile-fail/Rule_9_5.rs
fn main() {
    let _: [i32] = [0, 1];
    //~^ ERROR mismatched types
}
